Extjs2 - Fixed issue with mobile and overflow

--- a/examples/extjs2/style.css
+++ b/examples/extjs2/style.css
@@ -1,6 +1,3 @@
-body {
-  overflow: hidden
-}
 #loading {
   border: 1px solid #ccc;
   position: absolute;
